<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="widget"
            type="aut.dipterv.word_gardner.widgets.fragment_extensions.PackSelectorFooterWidget" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/packs_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pack_selection_footer_background"
        android:paddingTop="75dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/new_envelope_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/add_group_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:background="@color/transparent"
                android:onClick="@{() -> widget.switchPopupState()}"
                android:scaleType="fitCenter"
                android:src="@drawable/envelope_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <aut.dipterv.word_gardner.widgets.shared_widgets.FlipButton
                android:id="@+id/selector_flip_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                app:firstSide="@drawable/download_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:secondSide="@drawable/play_icon" />

            <ImageButton
                android:id="@+id/add_pack_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="80dp"
                android:background="@color/transparent"
                android:onClick="@{() -> widget.makeNewPack()}"
                android:scaleType="fitCenter"
                android:src="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_envelope_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:textColorHint="@color/colorAccent"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/white"
                app:layout_constraintBottom_toTopOf="@id/pack_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/category_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category"
                    android:paddingHorizontal="25dp"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pack_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginVertical="10dp"
                android:textColorHint="@color/colorAccent"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                app:layout_constraintBottom_toTopOf="@+id/public_switch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pack_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/group_name"
                    android:paddingHorizontal="25dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/public_switch"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginVertical="15dp"
                android:foreground="@drawable/green_border
"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/auto_add_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <Button
                    android:id="@+id/public_switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:background="@color/transparent"
                    android:onClick="@{() -> widget.switchPublic()}"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="0dp"
                    android:text="publikus"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/auto_add_card"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:foreground="@drawable/border"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/auto_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:background="@color/transparent"
                    android:onClick="@{() -> widget.makeFolder()}"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="0dp"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:gravity="center"
                android:paddingHorizontal="25dp"
                android:paddingTop="25dp"
                android:paddingBottom="0dp"
                android:text="@string/chose_packs_to_make_a_folder"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/folder_editing_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pack_name"
                app:layout_constraintStart_toStartOf="@+id/pack_name">

                <androidx.cardview.widget.CardView
                    android:id="@+id/auto_delete_card"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:foreground="@drawable/red_border"
                    app:cardBackgroundColor="@color/fifty_red"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toStartOf="@+id/auto_save_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/auto_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="0dp"
                        android:background="@color/transparent"
                        android:onClick="@{() -> widget.delete()}"
                        android:paddingVertical="0dp"
                        android:text="@string/delete"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/auto_save_card"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="10dp"
                    android:foreground="@drawable/border"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/auto_delete_card"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/auto_save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="0dp"
                        android:background="@color/transparent"
                        android:onClick="@{() -> widget.updateFolder()}"
                        android:paddingVertical="0dp"
                        android:text="@string/done"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>